<resources>
    <string name="app_name">Kalkulator</string>
    <string name="changeMode">...</string>
    <string name="delete">C</string>
    <string name="deleteAll">AC</string>
    <string name="multiply">*</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="decimal">.</string>
    <string name="negation">+/-</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="pow2">X^2</string>
    <string name="powY">X^Y</string>
    <string name="log">log</string>
    <string name="simply">Prosty</string>
    <string name="advance">Zaawansowany</string>
    <string name="about">O Aplikacji</string>
    <string name="exit">Wyjscie</string>
    <string name="name">Kalkulator</string>
    <string name="back">Powrót</string>
    <string name="author">Twórca: Kamil Szustak</string>
    <string name="description">Opis: Prosty kalkulator z możliwością przejścia na zaawansowany</string>
    <string name="brackets">()</string>
    <string name="percent">%</string>
</resources>