<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/buildTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:visibility="visible"
            tools:visibility="visible" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="#666666"
                android:background="@android:color/transparent"
                android:text="@string/changeMode" />

            <Button
                android:id="@+id/deleteSingle"
                android:onClick="clearOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="40sp"
                android:textColor="#b30000"
                android:background="@android:color/transparent"
                tools:ignore="NestedWeights" />

            <Button
                android:onClick="clearAllOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="35sp"
                android:textColor="#b30000"
                android:background="@android:color/transparent"
                android:text="@string/deleteAll" />

            <Button
                android:onClick="multiplyOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="#cc7a00"
                android:background="@android:color/transparent"
                android:text="@string/multiply"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:onClick="sevenOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/seven"  />

            <Button
                android:onClick="eightOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/eight"  />

            <Button
                android:onClick="nineOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/nine"  />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="divisionOnClick"
                android:text="@string/division"
                android:textColor="#cc7a00"
                android:textSize="40sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:onClick="fourOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/four"  />

            <Button
                android:onClick="fiveOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/five"  />

            <Button
                android:onClick="sixOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/six"  />

            <Button
                android:onClick="addOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="#cc7a00"
                android:background="@android:color/transparent"
                android:text="@string/add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:onClick="oneOnClick"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/one"   android:layout_width="wrap_content"/>

            <Button
                android:onClick="twoOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/two"  />

            <Button
                android:onClick="threeOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:text="@string/three"  />

            <Button
                android:onClick="minusOnClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textColor="#cc7a00"
                android:background="@android:color/transparent"
                android:text="@string/minus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="decimalOnClick"
                android:text="@string/decimal"
                android:textColor="#cc7a00"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="zeroOnClick"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="negationOnClick"
                android:text="@string/negation"
                android:textColor="#cc7a00"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="equalsOnClick"
                android:text="@string/equal"
                android:textColor="#cc7a00"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>